#
# Copyright (c) 2018 Linaro Limited
#
# SPDX-License-Identifier: Apache-2.0
#

if(CONFIG_OPENAMP)
set(WITH_ZEPHYR 1)
set(WITH_ZEPHYR_LIB 1)
if (CONFIG_OPENAMP_MASTER)
  set(WITH_VIRTIO_MASTER 1)
else()
  set(WITH_VIRTIO_MASTER OFF CACHE BOOL "" FORCE)
endif()
if (CONFIG_OPENAMP_SLAVE)
  set(WITH_VIRTIO_SLAVE 1)
else()
  set(WITH_VIRTIO_SLAVE OFF CACHE BOOL "" FORCE)
endif()
set(WITH_LIBMETAL_FIND OFF CACHE BOOL "" FORCE)
set(WITH_PROXY OFF CACHE BOOL "" FORCE)
set(LIBMETAL_INCLUDE_DIR ${ZEPHYR_BINARY_DIR}/ext/hal/libmetal/lib/include)
set(LIBMETAL_LIB ${ZEPHYR_BINARY_DIR}/ext/hal/libmetal/lib)

set(RPMSG_BUFFER_SIZE CONFIG_OPENAMP_RPMSG_BUFFER_SIZE)
zephyr_compile_definitions(RPMSG_BUFFER_SIZE=CONFIG_OPENAMP_RPMSG_BUFFER_SIZE)

add_subdirectory(${CONFIG_OPENAMP_SRC_PATH} open-amp)
endif()
